--- a/src/main/resources/assets/twilightopia/lang/en_us.json
+++ b/src/main/resources/assets/twilightopia/lang/en_us.json
@@ -69,6 +69,19 @@
     "block.twilightopia.snome_block": "Snome Block",
     "block.twilightopia.jelime_block": "Jelime Block",
     "block.twilightopia.neonlime_block": "Neonlime Block",
+    "block.twilightopia.andesite_pedestal": "Andesite Pedestal",
+    "block.twilightopia.diorite_pedestal": "Diorite Pedestal",
+    "block.twilightopia.granite_pedestal": "Granite Pedestal",
+    "block.twilightopia.polished_andesite_pedestal": "Polished Andesite Pedestal",
+    "block.twilightopia.polished_diorite_pedestal": "Polished Diorite Pedestal",
+    "block.twilightopia.polished_granite_pedestal": "Polished Granite Pedestal",
+    "block.twilightopia.andesite_roof": "Andesite Roof",
+    "block.twilightopia.diorite_roof": "Diorite Roof",
+    "block.twilightopia.granite_roof": "Granite Roof",
+    "block.twilightopia.polished_andesite_roof": "Polished Andesite Roof",
+    "block.twilightopia.polished_diorite_roof": "Polished Diorite Roof",
+    "block.twilightopia.polished_granite_roof": "Polished Granite Roof",
+    "block.twilightopia.ocean_lamp": "Ocean Lamp",
 	"item.twilightopia.lodge_herb": "Lodge Herb",
 	"item.twilightopia.quill": "Quill",
 	"item.twilightopia.chocolate_bar": "Chocolate Bar",
@@ -123,6 +136,7 @@
     "item.twilightopia.neonlime_spawn_egg": "Neonlime Spawn Egg",
 	"item.twilightopia.cherry_boat": "Cherry Boat[WIP]",
 	"item.twilightopia.ignite_boat": "Ignite Boat[WIP]",
+    "item.twilightopia.magic_debris": "Magic Debris",
 	"itemGroup.twilightopia_world": "Twilight World",
 	"itemGroup.twilightopia_block": "Twilight Blocks",
 	"itemGroup.twilightopia_food": "Twilight FoodStuffs",
