--- a/src/main/resources/assets/twilightopia/lang/zh_cn.json
+++ b/src/main/resources/assets/twilightopia/lang/zh_cn.json
@@ -69,6 +69,19 @@
     "block.twilightopia.snome_block": "凝霜块",
     "block.twilightopia.jelime_block": "果冻块",
     "block.twilightopia.neonlime_block": "霓虹块",
+    "block.twilightopia.andesite_pedestal": "安山岩基座",
+    "block.twilightopia.diorite_pedestal": "闪长岩基座",
+    "block.twilightopia.granite_pedestal": "花岗岩基座",
+    "block.twilightopia.polished_andesite_pedestal": "磨制安山岩基座",
+    "block.twilightopia.polished_diorite_pedestal": "磨制闪长岩基座",
+    "block.twilightopia.polished_granite_pedestal": "磨制花岗岩基座",
+    "block.twilightopia.andesite_roof": "安山岩斜顶",
+    "block.twilightopia.diorite_roof": "闪长岩斜顶",
+    "block.twilightopia.granite_roof": "花岗岩斜顶",
+    "block.twilightopia.polished_andesite_roof": "磨制安山岩斜顶",
+    "block.twilightopia.polished_diorite_roof": "磨制闪长岩斜顶",
+    "block.twilightopia.polished_granite_roof": "磨制花岗岩斜顶",
+    "block.twilightopia.ocean_lamp": "深海之灯",
 	"item.twilightopia.lodge_herb": "迎宾草",
 	"item.twilightopia.quill": "羽毛笔",
 	"item.twilightopia.chocolate_bar": "巧克力",
@@ -123,6 +136,7 @@
     "item.twilightopia.neonlime_spawn_egg": "彩莱姆刷怪蛋",
 	"item.twilightopia.cherry_boat": "樱桃木船[WIP]",
 	"item.twilightopia.ignite_boat": "烈焰木船[WIP]",
+    "item.twilightopia.magic_debris": "魔法碎片",
 	"itemGroup.twilightopia_world": "暮托邦",
 	"itemGroup.twilightopia_block": "暮之方块",
 	"itemGroup.twilightopia_food": "暮之肴馔",
